# Data-Domain-Fairness

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
data-domain-fairness/: datasets.py
data-domain-fairness/data/preprocessed/adult/: test.csv
data/raw/uci-adult/: README.md
ddf/: datasets.py  run_adult_cond_dep_working_hsic.py  run_data_domain_fair_repr.py
dfrdd/: clf.py  common.py  conf.py  relay.py
dfrdd/callbacks/: __init__.py  log_images.py  save.py  z_properties.py
dfrdd/components/: grad_proj.py  grad_reverse.py  hsic.py  mmd.py
dfrdd/models/: __init__.py  autoencoder.py  dfrdd.py  erm.py  vgg.py
dfrdd/outputs/2022-01-17/12-13-17/.hydra/: config.yaml  hydra.yaml  overrides.yaml
dfrdd/outputs/2022-01-17/12-13-43/.hydra/: overrides.yaml
dfrdd/outputs/2022-01-17/12-14-31/.hydra/: config.yaml
dfrdd/outputs/2022-01-17/13-30-51/.hydra/: config.yaml
dfrdd/outputs/2022-01-17/14-08-09/.hydra/: hydra.yaml
external_confs/data/: celeba.yaml  cmnist.yaml  defaults.yaml
external_confs/model/: ae.yaml  aegrl.yaml  aegrldo.yaml  aegrlens.yaml  aegrlmmd.yaml  defaults.yaml  dfrdd.yaml  gpd.yaml  id.yaml  mmd.yaml  vae.yaml  vaegrl.yaml  vaemmd.yaml
hydra_plugins/: search_path_plugin.py
