[tool.poetry]
name = "ddf"
version = "0.1.0"
description = ""
authors = ["Oliver Thomas <1835492+olliethomas@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9"
torchaudio = "0.12.0"
torch-conduit = "0.1.3"
kornia = "0.6.6"
wandb = "0.13.1"
pytorch-lightning = "1.6.5"
fairscale = "0.4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
